[package]
name = "MoreAccessorySlots"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
engage = { version = "0.6.0", git = "https://github.com/DivineDragonFanClub/engage" } # Contains a set of functions and utilities to call the game's code.
unity = { version = "0.3.0", git = "https://github.com/DivineDragonFanClub/unity" } # Utilities to talk with Unity internals. You usually wouldn't need it unless what you want isn't in the engage crate.
include_dir = { version = "0.7" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
